appId: com.chrisjosh.rnpractice
---
- assertVisible: 'Good day, Test user'
- scroll
- tapOn:
    text: 'Refresh'
    repeat: 2
    delay: 2000
- tapOn:
    text: 'Explore, tab, 2 of 3'